@@ -3,8 +3,8 @@ Version 0.143:
 libdw: Various convenience functions for individual attributes now use
        dwarf_attr_integrate to look up indirect inherited attributes.
 
-libdwfl: Support Linux bzip2 kernel images for automatic decompression.
-	 Support automatic decompression of files in XZ format.
+libdwfl: Support automatic decompression of files in XZ format,
+	 and of Linux kernel images made with bzip2 or LZMA (as well as gzip).
 
 Version 0.142:
 
